fix: source display on mobile

--- a/styles/article.css
+++ b/styles/article.css
@@ -34,3 +34,14 @@ article h2 {
     justify-content: space-between;
     align-items: flex-end;
 }
+
+@media (max-width: 900px) {
+    .source-name {
+        margin-left: 0;
+        margin-top: 10px;
+    }
+
+    .article-title {
+        display: block;
+    }
+}
